# shadertoy-cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  meson.options
cmake/: shadertoy-cxx-config.cmake.in  shadertoy-cxx.pc.in
examples/: CMakeLists.txt  gles_sweep.cpp  headless_render.cpp  meson.build  probe.cpp
include/shadertoy/: audio.hpp  audio_pipewire.hpp  config.hpp.in  gl_renderer.hpp  inputs.hpp  loader.hpp  meson.build  playlist.hpp  program.hpp  spirv_compile.hpp  vk_renderer.hpp
scripts/: fetch_shadertoy.sh  gen_blacklist.sh  list_audio_shaders.sh  persist_sweep.sh  shadertoy_assets.sh  test_audio_shaders.sh
shaders/: CREDITS.md  X3yXRd.json  default.frag  trail.json
src/: audio.cpp  audio_alsa.cpp  audio_internal.hpp  audio_pipewire.cpp  gl_renderer.cpp  inputs.cpp  loader.cpp  playlist.cpp  program.cpp  spirv_compile.cpp  stb_image_impl.cpp  vk_renderer.cpp
